[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/images/marco.png" type="Texture" id=6]
[ext_resource path="res://assets/img/images/Group.png" type="Texture" id=7]
[ext_resource path="res://assets/img/images/Bloque.png" type="Texture" id=8]
[ext_resource path="res://assets/img/images/Rec.png" type="Texture" id=9]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 50
use_filter = true
font_data = ExtResource( 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="Container" type="Sprite" parent="."]
position = Vector2( 230.706, 461.412 )
texture = ExtResource( 9 )
flip_h = true

[node name="LogicOperator" type="Button" parent="Container"]
margin_left = -190.706
margin_top = -181.412
margin_right = 186.294
margin_bottom = -91.4123
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VariableOne" type="Button" parent="Container/LogicOperator"]
margin_left = 34.7584
margin_top = 72.0912
margin_right = 375.758
margin_bottom = 139.091
icon = ExtResource( 8 )
flat = true

[node name="Label3" type="Label" parent="Container/LogicOperator/VariableOne"]
margin_left = 103.0
margin_top = 8.0
margin_right = 142.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "90"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VariableTwo" type="Button" parent="Container/LogicOperator"]
margin_left = 34.7584
margin_top = 121.535
margin_right = 375.758
margin_bottom = 188.535
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Container/LogicOperator/VariableTwo"]
margin_left = 103.0
margin_top = 9.0
margin_right = 155.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "125"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Container/LogicOperator"]
margin_left = 54.0
margin_top = 27.0
margin_right = 143.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.552941, 0.156863, 0.560784, 1 )
text = "Suma"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Button" parent="Container"]
visible = false
margin_left = -158.706
margin_top = 98.5877
margin_right = 182.294
margin_bottom = 165.588
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Container/Result"]
margin_left = 120.0
margin_top = 8.0
margin_right = 168.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "215"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1000, 450 )
texture = ExtResource( 6 )
flip_h = true

[node name="OpeLogico" type="Label" parent="Sprite2"]
visible = false
margin_left = -168.0
margin_top = -250.0
margin_right = 168.0
margin_bottom = -191.0
custom_fonts/font = SubResource( 3 )
text = "        Operador usado para realizar la suma"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpeLogico2" type="Label" parent="Sprite2"]
visible = false
margin_left = -168.0
margin_top = -170.0
margin_right = 8.0
margin_bottom = -142.0
custom_fonts/font = SubResource( 3 )
text = "var a = 90"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpeLogico3" type="Label" parent="Sprite2"]
visible = false
margin_left = -168.0
margin_top = -130.0
margin_right = 8.0
margin_bottom = -102.0
custom_fonts/font = SubResource( 3 )
text = "var b = 125"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpeLogico4" type="Label" parent="Sprite2"]
visible = false
margin_left = -168.0
margin_top = -90.0
margin_right = 56.0
margin_bottom = -62.0
custom_fonts/font = SubResource( 3 )
text = "Resultado = a + b"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpeLogico5" type="Label" parent="Sprite2"]
visible = false
margin_left = -168.0
margin_top = -26.0
margin_right = 176.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "De esta manera se declaran las variables y se usarian mediante codigo escrito.
Cada numero equivale a una variable y el resultado seria la suma de las variables"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite2"]
visible = false
margin_left = -168.0
margin_top = -274.0
margin_right = -136.0
margin_bottom = -212.0
custom_fonts/font = SubResource( 4 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Container/LogicOperator" to="." method="_on_LogicOperator_pressed"]
[connection signal="pressed" from="Container/LogicOperator/VariableOne" to="." method="_on_VariableOne_pressed"]
[connection signal="pressed" from="Container/LogicOperator/VariableTwo" to="." method="_on_VariableTwo_pressed"]
[connection signal="pressed" from="Container/Result" to="." method="_on_Result_pressed"]
